<resources>
    <string name="app_name">Groupon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="in">跳过</string>
    <string name="into">立即开启</string>
    <string name="my">我的</string>
    <string name="find">发现</string>
    <string name="group">闪惠团购</string>
    <string name="home">首页</string>
    <string name="play">付款码</string>
    <string name="scan">扫一扫</string>
    <string name="store">添加商户</string>
    <string name="comment">写点评</string>
    <string name="ktv">KTV</string>
</resources>
