<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingBottom="3dp"
    android:paddingTop="5dp">

    <RadioButton
        android:id="@+id/rb_main_footer_home"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:button="@null"
        android:checked="true"
        android:drawableTop="@drawable/rb_home_selector"
        android:gravity="center"
        android:text="@string/home"
        android:textColor="@color/rb_text_selector"
        android:textSize="12sp" />

    <RadioButton
        android:id="@+id/rb_main_footer_group"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:button="@null"
        android:drawableTop="@drawable/rb_group_selector"
        android:gravity="center"
        android:text="@string/group"
        android:textColor="@color/rb_text_selector"
        android:textSize="12sp" />

    <RadioButton
        android:id="@+id/rb_main_footer_find"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:button="@null"
        android:drawableTop="@drawable/rb_find_selector"
        android:gravity="center"
        android:text="@string/find"
        android:textColor="@color/rb_text_selector"
        android:textSize="12sp" />

    <RadioButton
        android:id="@+id/rb_main_footer_my"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:button="@null"
        android:drawableTop="@drawable/rb_my_selector"
        android:gravity="center"
        android:text="@string/my"
        android:textColor="@color/rb_text_selector"
        android:textSize="12sp" />

</RadioGroup>