<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="180dp"
    android:orientation="vertical"
    android:background="#ffffffff">

        <TextView
            android:id="@+id/main_menu_tv_comment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/home_navibar_tips_icon_comment"
            android:text="@string/comment"
            android:textSize="16sp" 
            />

        <TextView
            android:id="@+id/main_menu_tv_store"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/home_navibar_tips_icon_store"
            android:text="@string/store"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/main_menu_tv_scan"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/home_navibar_tips_icon_scan"
            android:text="@string/scan"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/main_menu_tv_play"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/home_add_icon_pay"
            android:text="@string/play"
            android:textSize="16sp" />

</LinearLayout>